# drf_tutorial

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
user/: models.py
user/migrations/: 0001_initial.py
